--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Art collection manager",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/index.test.js -w"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/timofeysie/curator#readme",
   "dependencies": {
     "unique-random-array": "1.0.0"
+  },
+  "devDependencies": {
+    "chai": "3.3.0",
+    "mocha": "2.3.3"
   }
 }
