--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
-    "test": "mocha src/index.test.js -w",
-    "test:single": "mocha src/index.test.js",
+    "report-coverage": "cat ./coverage/lcove.info | codecov ",
+    "test": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js -w",
+    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -27,12 +28,20 @@
   },
   "devDependencies": {
     "chai": "3.3.0",
+    "codecov.io": "0.1.6",
     "commitizen": "1.0.5",
     "cz-conventional-changelog": "1.0.1",
+    "ghooks": "0.3.2",
+    "istanbul": "0.3.22",
     "mocha": "2.3.3",
     "semantic-release": "^4.3.5"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run test:single"
+    }
   }
 }
