--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
 after_success:
   - npm run report-coverage
   - npm run semantic-release
+  - npm run codecov
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
