--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "art-curator",
-  "version": "0.0.0-sematically-released",
+  "version": "1.2.5-sematically-released",
   "description": "Art collection manager",
   "main": "dist/index.js",
   "scripts": {
@@ -40,7 +40,8 @@
     "ghooks": "0.3.2",
     "istanbul": "0.3.22",
     "mocha": "2.3.3",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "sinon": "^6.1.0"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
